# DY-golfcart-monolith

./: .coveragerc  .dockerignore  .env.example  .gitignore  CNAME  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_transactions.py
.github/issue_template/: bug_report.md
.github/issue_templates/: feature_request.md
.github/merge_request_templates/: default.md
.github/workflows/: cd.yml  ci.yml  claude-code-review.yml  test-and-coverage.yml
app/: config.py  database.py  main.py  models.py  redis.py
app/api/: __init__.py  auth.py  carts.py  golf_courses.py  maps.py
app/core/: __init__.py  config.py  database.py  enums.py  security.py
app/infrastructure/: event_bus.py
app/middleware/: auth.py
app/models/: __init__.py  cart.py  custom_types.py  event_log.py  golf_cart.py  golf_course.py  operations.py  telemetry.py  user.py
app/routers/: address.py  auth.py  cart.py  golf_carts.py  golf_course.py  map.py  protected.py  user.py
app/schemas/: __init__.py  auth.py  base.py  cart.py  golf_cart.py  golf_course.py
app/services/: __init__.py  address_service.py  auth_service.py  cart_service.py  keycloak.py  (+7 more)
docs/: integration_testing.ko.md  integration_testing.md  keycloak-integration.md  test-coverage-guide.md
tests/: README.md  conftest.py  test_auth.py  test_cart.py  test_cart_workflow.py  test_e2e_prd_workflows.py  test_golf_course.py  test_golf_course_workflow.py  test_map.py  test_scenarios.md
(+61 files in other folders)
